# api/rest/src/main/kotlin/com/quqee/backend/internship_hits/api/rest/config/RestBeanConfiguration.kt
@@ -16,6 +16,7 @@ import org.springframework.context.annotation.Configuration
         "com.quqee.backend.internship_hits.file",
         "com.quqee.backend.internship_hits.position",
         "com.quqee.backend.internship_hits.meeting",
+        "com.quqee.backend.internship_hits.statistic",
     ]
 )
 open class RestBeanConfiguration
