# public_interface/statistic_interface/src/main/kotlin/com/quqee/backend/internship_hits/public_interface/statistic/PositionStatisticDto.kt
@@ -1,0 +1,6 @@
+package com.quqee.backend.internship_hits.public_interface.statistic
+
+data class PositionStatisticDto(
+    val position: String,
+    val value: Long
+)
